# hyperopt_prophet

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  compose-dev.yaml  environment.yml  example.py  it.py  main.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
example/: data.csv  example.py  sample_data.csv  training.env
hyperopt_prophet/: __init__.py  hyperopt_prophet.py  model.py  training.py
hyperopt_prophet_spark/: __init__.py  hyperopt_prophet_spark.py
sample_data/: data.csv
