[tool.poetry]
name = "hyperopt-prophet-spark"
version = "0.1.0"
description = "Integration of prophet forecasting with hyperopt, sparktrials, mlflow and pyspark"
authors = ["Carlos D. Escobar-Valbuena <carlosdavidescobar@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "hyperopt_prophet_spark"},
    {include = "main.py"}
]

[tool.poetry.dependencies]
python = "^3.8"
databricks-session = "^0.2.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyperopt_prophet_spark = 'hyperopt_prophet_spark:entrypoint'